# bevy-explore

./: .gitattributes  .gitignore  Cargo.toml  attribution.md  flake.nix  readme.md
.cargo/: config.toml
.github/workflows/: static.yml
.helix/: languages.toml
docs/: game.js  index.html  mygame.js
docs/wasm/: game.js  game_bg.wasm  index.html  learn-bevy.wasm
src/: assets.rs  astroids.rs  camera.rs  collide.rs  collide_dmg.rs  despawn.rs  far.rs  guns.rs  health.rs  keyboard.rs  layers.rs  lib.rs  main.rs  movement.rs  schedule.rs  sentry.rs  ship.rs  stage.rs  state.rs  ui.rs  zones.rs
src/guns/: mod.rs  ninja.rs  plasma.rs
www/: index.html
