[package]
name = "learn-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
rand = "0.8.5"
bevy = { version = "0.13.0", features = ["mp3", "png", "wav", "wayland"] }
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
rand_distr = "0.4.3"
bevy-inspector-egui = "0.24.0"
bevy_xpbd_2d = "0.4.2"

# dynamic_linking speeds builds alot but is best to remove before final release to enbale standalone 
[target.x86_64-unknown-linux-gnu.dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
