[package]
name = "learn-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
rand = "0.8.*"
bevy = { version = "0.14.*", features = ["mp3", "png", "wav", "wayland"] }
rand_pcg = "0.3.*"
rand_seeder = "0.2.*"
rand_distr = "0.4.*"
bevy-inspector-egui = "0.25.*"
avian2d = "0.1.*"

# dynamic_linking speeds builds alot but is best to remove before final release to enbale standalone 
[target.x86_64-unknown-linux-gnu.dependencies]
bevy = { version = "0.14.*", features = ["dynamic_linking"] }
